[gd_scene load_steps=9 format=3 uid="uid://c5r6xtd4t08wa"]

[ext_resource type="Script" uid="uid://c1p7ng3pk52u4" path="res://scripts/ui/gameover_ui.gd" id="1_bql5x"]
[ext_resource type="Texture2D" uid="uid://ctkxoq0ept6eh" path="res://resources/pic/text_game_over.png" id="1_ph65f"]
[ext_resource type="Texture2D" uid="uid://gafiafbomkwi" path="res://resources/pic/score_panel.png" id="2_ijo7e"]
[ext_resource type="Texture2D" uid="uid://dd5llwho5o7t8" path="res://resources/pic/button_play.png" id="3_rodr6"]
[ext_resource type="Texture2D" uid="uid://2j4q7vgru7yl" path="res://resources/pic/button_score.png" id="4_08m3n"]
[ext_resource type="PackedScene" uid="uid://cwlmfv44q045s" path="res://prefabs/ui/score_over.tscn" id="4_gnq37"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bql5x"]
content_margin_left = 5.0
content_margin_top = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnq37"]
content_margin_left = 5.0
content_margin_top = 5.0

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bql5x")

[node name="GameOverTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -239.5
offset_top = 246.0
offset_right = 239.5
offset_bottom = 431.0
grow_horizontal = 2
texture = ExtResource("1_ph65f")

[node name="ScoreTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -159.0
offset_right = 285.5
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ijo7e")

[node name="MedalTexture" type="TextureRect" parent="ScoreTextureRect"]
layout_mode = 1
anchors_preset = -1
offset_left = 73.0
offset_top = 109.0
offset_right = 188.0
offset_bottom = 223.0

[node name="CurrentScore" parent="ScoreTextureRect" instance=ExtResource("4_gnq37")]
layout_mode = 1
offset_left = 402.0
offset_top = 100.0
offset_right = 452.0
offset_bottom = 120.0
scale = Vector2(2, 2)

[node name="BestScore" parent="ScoreTextureRect" instance=ExtResource("4_gnq37")]
layout_mode = 1
offset_left = 403.0
offset_top = 194.0
offset_right = 453.0
offset_bottom = 214.0
scale = Vector2(2, 2)

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = -442.0
offset_right = 364.0
offset_bottom = -254.0
grow_vertical = 0
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxFlat_bql5x")
icon = ExtResource("3_rodr6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="RanklistButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -361.0
offset_top = -449.0
offset_right = -58.0
offset_bottom = -247.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxFlat_gnq37")
icon = ExtResource("4_08m3n")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="RanklistButton" to="." method="_on_leaderboard_button_pressed"]
